--- a/app/pages/AddressBook/AddressBookPage.module.scss
+++ b/app/pages/AddressBook/AddressBookPage.module.scss
@@ -2,10 +2,8 @@
 
 .columns {
     height: $page-height;
-    padding: 20px 0;
 }
 
 .column {
     flex-basis: 560px;
-    padding: 40px 0;
 }
